--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <div class="container">
         <!-- intestazione -->
         <header>
-
+            <div class="intestazione">
+                <img class="logo" src="./img/logo.svg" alt="Logo">
+            </div>
         </header>
 
         <main>
