--- a/index.html
+++ b/index.html
@@ -21,7 +21,19 @@
         <main>
             <!-- titolo e foto -->
             <section>
-
+                <div>
+                    <h1 class="titolo">Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+                    <div>
+                        <span class="info">Scritto da <span class="author">The Booleaner</span></span>
+                        <p class="data">il 10/20/2020</p>
+                    </div>
+                    <div>
+                        <img src="./img/tim-1.jpg" alt="tim">
+                        <img src="./img/tim-2.jpg" alt="tim">
+                        <p>1st Photo: John S. and James L. Kinght Foundation, by Scott Henrichsen</p>
+                        <span>1nd Photo: Wikimedia, By Paul Clarke</span>
+                    </div>
+                </div>
             </section>
             <!-- articolo -->
             <section>
