--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     <div>
                         <img src="./img/tim-1.jpg" alt="tim">
                         <img src="./img/tim-2.jpg" alt="tim">
-                        <p>1st Photo: John S. and James L. Kinght Foundation, by Scott Henrichsen</p>
-                        <span>1nd Photo: Wikimedia, By Paul Clarke</span>
+                        <span> <br> 1st Photo: John S. and James L. Kinght Foundation, by Scott Henrichsen</span>
+                        <span> <br> 1nd Photo: Wikimedia, By Paul Clarke</span>
                     </div>
                 </div>
             </section>
@@ -81,7 +81,10 @@
             </section>
         </main>
         <footer>
-
+            <h3 class="titolo-footer">Potrebbero interessarti</h3>
+            <div class="cella uno">Lorem ipsum dolor</div>
+            <br>
+            <div class="cella due">Lorem ipsum dolor</div>
         </footer>
     </div>
 </body>
