table-footer-fixed

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             <!-- titolo e foto -->
             <section>
                 <div>
-                    <h1 class="titolo">Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+                    <h1 class="titolo">Internet deve essere al servizio del "bene pubblico": il manifesto di Tim
+                        Berners-Lee</h1>
                     <div>
                         <span class="info">Scritto da <span class="author">The Booleaner</span></span>
                         <p class="data">il 10/20/2020</p>
@@ -38,13 +39,26 @@
             <!-- articolo -->
             <section>
                 <div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat quia sapiente quas recusandae ipsa blanditiis, libero dolores quos hic inventore exercitationem omnis quo  <span class="sottolineato"> expedita eaque magnam saepe illum nostrum provident! Lorem ipsum dolor </span> sit amet consectetur adipisicing elit. Reprehenderit sit quod vitae enim similique libero ad molestiae aliquid sint, doloremque necessitatibus facere labore est consequatur unde cumque quibusdam illo sed. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia eveniet aperiam tenetur voluptate nulla laboriosam ab voluptas unde quisquam. Ipsam maxime numquam iusto aliquid cumque labore? Minima dolore doloribus consequatur!</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat quia sapiente quas recusandae
+                        ipsa blanditiis, libero dolores quos hic inventore exercitationem omnis quo <span
+                            class="sottolineato"> expedita eaque magnam saepe illum nostrum provident! Lorem ipsum dolor
+                        </span> sit amet consectetur adipisicing elit. Reprehenderit sit quod vitae enim similique
+                        libero ad molestiae aliquid sint, doloremque necessitatibus facere labore est consequatur unde
+                        cumque quibusdam illo sed. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia
+                        eveniet aperiam tenetur voluptate nulla laboriosam ab voluptas unde quisquam. Ipsam maxime
+                        numquam iusto aliquid cumque labore? Minima dolore doloribus consequatur!</p>
                 </div>
                 <div>
                     <ul>
-                        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure obcaecati neque facere? Mollitia, aut nam! Incidunt quod culpa natus vitae molestias reiciendis excepturi. Totam nobis aliquid corrupti inventore consequatur illo.</li>
-                        <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam quam animi cum id aliquid harum suscipit doloremque impedit rem odio quia corrupti est minus repudiandae nostrum maiores, officiis recusandae excepturi!</li>
-                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit omnis beatae quod. Repudiandae delectus, dolorum veritatis architecto debitis fuga asperiores? Atque officiis optio dolor voluptate molestias nulla mollitia, necessitatibus voluptatum.</li>
+                        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure obcaecati neque facere?
+                            Mollitia, aut nam! Incidunt quod culpa natus vitae molestias reiciendis excepturi. Totam
+                            nobis aliquid corrupti inventore consequatur illo.</li>
+                        <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam quam animi cum id aliquid
+                            harum suscipit doloremque impedit rem odio quia corrupti est minus repudiandae nostrum
+                            maiores, officiis recusandae excepturi!</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit omnis beatae quod.
+                            Repudiandae delectus, dolorum veritatis architecto debitis fuga asperiores? Atque officiis
+                            optio dolor voluptate molestias nulla mollitia, necessitatibus voluptatum.</li>
                     </ul>
                 </div>
                 <div>
@@ -60,23 +74,39 @@
                             <tr class="riga-dispari">
                                 <td>Lorem ipsum dolor</td>
                                 <td>Lorem ipsum dolor</td>
-                                <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi maiores laudantium, ipsam quam autem temporibus laborum distinctio, nobis molestiae dolore nulla quisquam perspiciatis hic voluptatibus ullam. Beatae distinctio deserunt alias.</td>
+                                <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi maiores
+                                    laudantium, ipsam quam autem temporibus laborum distinctio, nobis molestiae dolore
+                                    nulla quisquam perspiciatis hic voluptatibus ullam. Beatae distinctio deserunt
+                                    alias.</td>
                             </tr>
                             <tr>
                                 <td>Lorem ipsum dolor</td>
                                 <td>Lorem ipsum dolor</td>
-                                <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi maiores laudantium, ipsam quam autem temporibus laborum distinctio, nobis molestiae dolore nulla quisquam perspiciatis hic voluptatibus ullam. Beatae distinctio deserunt alias.</td>
+                                <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi maiores
+                                    laudantium, ipsam quam autem temporibus laborum distinctio, nobis molestiae dolore
+                                    nulla quisquam perspiciatis hic voluptatibus ullam. Beatae distinctio deserunt
+                                    alias.</td>
                             </tr>
                             <tr class="riga-dispari">
                                 <td>Lorem ipsum dolor</td>
                                 <td>Lorem ipsum dolor</td>
-                                <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi maiores laudantium, ipsam quam autem temporibus laborum distinctio, nobis molestiae dolore nulla quisquam perspiciatis hic voluptatibus ullam. Beatae distinctio deserunt alias.</td>
+                                <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi maiores
+                                    laudantium, ipsam quam autem temporibus laborum distinctio, nobis molestiae dolore
+                                    nulla quisquam perspiciatis hic voluptatibus ullam. Beatae distinctio deserunt
+                                    alias.</td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
                 <div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto illum eligendi quibusdam et soluta, reprehenderit expedita temporibus voluptatibus illo, odit adipisci, incidunt corrupti labore facere eaque tempore perferendis natus ducimus. <span class="sottolineato">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste cupiditate aut</span> esse harum dolorum veritatis quo eum? Incidunt quam necessitatibus corporis pariatur ut? Et neque, animi blanditiis aliquam quo nam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, beatae aut? Id suscipit, modi hic eligendi libero voluptatibus deleniti repellendus assumenda voluptatum alias sapiente expedita porro non commodi dolores esse.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto illum eligendi quibusdam et
+                        soluta, reprehenderit expedita temporibus voluptatibus illo, odit adipisci, incidunt corrupti
+                        labore facere eaque tempore perferendis natus ducimus. <span class="sottolineato">Lorem ipsum
+                            dolor sit amet consectetur adipisicing elit. Iste cupiditate aut</span> esse harum dolorum
+                        veritatis quo eum? Incidunt quam necessitatibus corporis pariatur ut? Et neque, animi blanditiis
+                        aliquam quo nam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, beatae aut? Id
+                        suscipit, modi hic eligendi libero voluptatibus deleniti repellendus assumenda voluptatum alias
+                        sapiente expedita porro non commodi dolores esse.</p>
                 </div>
             </section>
         </main>
